# Group35_2IC80_Project

./: .gitignore  Dns_spoofing_script.ipynb  README.md  arp.py  arp_mitm_dns_poisoning.py  arp_mitm_dns_spoofing.py  arp_mitm_spoofing.py  arp_poisioning_scapy_script (1).py  arp_poisioning_scapy_script.ipynb  arp_poisioning_scapy_script.py  arp_poisoning.py  arp_sniffing.py  arpp.py  captured_packets.pcap  dns_spoofing.py  dp.py  library_dns_spoofing.py  main.py  pyproject.toml  requirements.txt  salah sus  sniffedPackets.pcap  ssl_stripping.py
attacks/: arp_poisoning.py  dns_spoofing.py  library_dns_spoofing.py
dp/: __main__.py  cli.py
dp/attacks/: ClientRequest.py  DnsCache.py  URLMonitor.py  __init__.py  all.py  arp_poisoning.py  dns_spoofing.py  ssl_stripping.py
dp/attacks/sslstrip/: ClientRequest.py  CookieCleaner.py  SSLServerConnection.py  ServerConnection.py  ServerConnectionFactory.py  StrippingProxy.py  all.py
project_env/: pip-selfcheck.json
