[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "Your package description."
authors = ["Your Name <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
scapy = "^2.4.5"
netifaces = "^0.11.0"
twisted = "^21.7.0"
click = "^7.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
type = "git"
url = "https://github.com/SalaheldinM/Group35_2IC80_Project.git"
